[gd_scene load_steps=31 format=3 uid="uid://4wbby5vfnlxu"]

[ext_resource type="Script" uid="uid://ucg2ag04asap" path="res://addons/godot-xr-tools/xr/start_xr.gd" id="1_o5qli"]
[ext_resource type="Script" uid="uid://cuw6n24u6n8fi" path="res://scripts/main.gd" id="1_tefeu"]
[ext_resource type="PackedScene" uid="uid://bi7qlvlaw55hp" path="res://scenes/table.tscn" id="3_jyhfs"]
[ext_resource type="PackedScene" uid="uid://r1vcgpitiqqh" path="res://scenes/player.tscn" id="3_sugp2"]
[ext_resource type="PackedScene" uid="uid://ehrfdkca75q6" path="res://scenes/macintosh_128k.tscn" id="6_85g3d"]
[ext_resource type="AudioStream" uid="uid://duxmxphineg6y" path="res://assets/Sounds/crt.mp3" id="6_jscy8"]
[ext_resource type="Texture2D" uid="uid://p7kflmn20x4s" path="res://assets/textures/floorboards.jpg" id="7_eb6dy"]
[ext_resource type="PackedScene" uid="uid://bige7i84eb7ne" path="res://scenes/floppy_disk.tscn" id="7_o6xl0"]
[ext_resource type="MeshLibrary" uid="uid://bwhlr0aglh4kt" path="res://assets/gridmaps/roof-yellow.tres" id="8_tipki"]
[ext_resource type="MeshLibrary" uid="uid://dbsdufn4gyeu6" path="res://assets/gridmaps/cubicals.tres" id="9_85g3d"]
[ext_resource type="PackedScene" uid="uid://jlcmmtgrewaf" path="res://scenes/mouse.tscn" id="9_choun"]
[ext_resource type="Texture2D" uid="uid://cbdgum2bjl8sc" path="res://assets/textures/flourish-wallpaper-in-patina-3120-mm-architextures.jpg" id="9_trceg"]
[ext_resource type="PackedScene" uid="uid://bvgh6dld3mx0h" path="res://scenes/keyboard.tscn" id="10_choun"]
[ext_resource type="PackedScene" uid="uid://dk7tmn0tioe7y" path="res://scenes/cup.tscn" id="11_ya4ey"]
[ext_resource type="PackedScene" uid="uid://d3ryxkvnl07uo" path="res://assets/models/WallTrim.blend" id="14_a8y0u"]
[ext_resource type="AudioStream" uid="uid://dbrjdb8excnsv" path="res://assets/Sounds/key_press.mp3" id="14_pm3ni"]
[ext_resource type="PackedScene" uid="uid://byuayh3u41ox0" path="res://scenes/Picture.tscn" id="15_jkv2x"]
[ext_resource type="PackedScene" uid="uid://c4xoum6tgvhm7" path="res://scenes/pen.tscn" id="16_jbj1t"]
[ext_resource type="PackedScene" uid="uid://b480lyr2mkuxs" path="res://scenes/pen_2.tscn" id="17_muem4"]
[ext_resource type="PackedScene" uid="uid://d2bedjr2tvr1b" path="res://scenes/stickynote_red.tscn" id="20_gqmmt"]
[ext_resource type="PackedScene" uid="uid://b77ekfjsuunyh" path="res://scenes/stickynote_blue.tscn" id="20_yc10j"]
[ext_resource type="PackedScene" uid="uid://cwto5xx2ulcon" path="res://scenes/stickynote_yellow.tscn" id="21_jscy8"]
[ext_resource type="AudioStream" uid="uid://1symmli2j1gv" path="res://assets/Sounds/humloop.wav" id="21_yc10j"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_o6xl0"]
shading_mode = 0
albedo_color = Color(0.484398, 0.484398, 0.484398, 1)
albedo_texture = ExtResource("7_eb6dy")
uv1_scale = Vector3(4.675, 4.675, 4.675)

[sub_resource type="PlaneMesh" id="PlaneMesh_o6xl0"]
material = SubResource("StandardMaterial3D_o6xl0")
size = Vector2(10, 17)

[sub_resource type="BoxShape3D" id="BoxShape3D_85g3d"]
size = Vector3(10, 0, 17)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a8y0u"]
albedo_texture = ExtResource("9_trceg")
uv1_scale = Vector3(15, 7.501, 15)

[sub_resource type="BoxMesh" id="BoxMesh_choun"]
lightmap_size_hint = Vector2i(123, 156)
material = SubResource("StandardMaterial3D_a8y0u")
flip_faces = true
size = Vector3(10, 4, 16)

[sub_resource type="PlaneMesh" id="PlaneMesh_choun"]
size = Vector2(0.512, 0.342)
center_offset = Vector3(0.256, 0, 0.171)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_y6deb"]
playback_mode = 2
random_pitch = 1.25
random_volume_offset_db = 0.5
streams_count = 1
stream_0/stream = ExtResource("14_pm3ni")

[node name="Main" type="Node3D"]
script = ExtResource("1_tefeu")

[node name="XRToolsStartXR" type="Node" parent="."]
script = ExtResource("1_o5qli")
metadata/_custom_type_script = "uid://ucg2ag04asap"

[node name="Player" parent="." instance=ExtResource("3_sugp2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5167336, 0.0925)

[node name="BoothOrigin" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5637202, 0.12747848)

[node name="Environment" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
light_energy = 0.0

[node name="Lights" type="Node3D" parent="Environment"]

[node name="BehindPlayerLight" type="SpotLight3D" parent="Environment/Lights"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -1, 3.43116, 3.071)
light_color = Color(1, 1, 0.603922, 1)
light_energy = 1.5
spot_range = 12.441
spot_angle = 90.0
spot_angle_attenuation = 0.133972

[node name="RoofLight" type="SpotLight3D" parent="Environment/Lights"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.804038, 1.99649, 0)
light_color = Color(1, 1, 0.603922, 1)
light_cull_mask = 4294966273
spot_range = 9.905
spot_angle = 81.44
spot_angle_attenuation = 0.052556

[node name="AbovePlayerLight" type="SpotLight3D" parent="Environment/Lights"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3.50934, 0)
light_color = Color(1, 1, 0.603922, 1)
shadow_enabled = true

[node name="InFrontPlayerLight" type="SpotLight3D" parent="Environment/Lights"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -1, 3.431, -5.741)
light_color = Color(1, 1, 0.603922, 1)
light_energy = 1.5
spot_range = 12.441
spot_angle = 90.0
spot_angle_attenuation = 0.133972

[node name="Table" parent="." instance=ExtResource("3_jyhfs")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0.5, -0.525164)
collision_layer = 65537

[node name="Macintosh128K" parent="Table" instance=ExtResource("6_85g3d")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.206087, 0.727778, 9.00837e-09)
collision_layer = 3

[node name="crtnoise" type="AudioStreamPlayer3D" parent="Table/Macintosh128K"]
stream = ExtResource("6_jscy8")
volume_db = -1.0
unit_size = 0.2
max_db = 2.0
autoplay = true

[node name="FloppyDisk" parent="." instance=ExtResource("7_o6xl0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.363613, 1.12529, -0.765387)

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.00061, 2.38419e-07, -0.0655703)

[node name="Mesh" type="MeshInstance3D" parent="Floor"]
layers = 3
mesh = SubResource("PlaneMesh_o6xl0")
skeleton = NodePath("../../Player")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_85g3d")

[node name="Cubicles" type="GridMap" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1)
mesh_library = ExtResource("9_85g3d")
cell_scale = 0.974
collision_layer = 3
collision_mask = 3
data = {
"cells": PackedInt32Array(65535, 65534, 0, 65535, 65533, 0, 65535, 0, 0, 65535, 1, 0, 65535, 65535, 0, 65534, 65533, 131072, 65534, 65534, 131072, 65534, 65535, 131072, 65534, 0, 131072, 65534, 1, 131072)
}

[node name="Walls" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1.98868, 0)
layers = 2
mesh = SubResource("BoxMesh_choun")

[node name="Roof" type="GridMap" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 3.09, 0)
mesh_library = ExtResource("8_tipki")
data = {
"cells": PackedInt32Array(3, 7, 0, 3, 6, 0, 3, 5, 0, 3, 4, 0, 3, 3, 0, 3, 2, 0, 3, 1, 0, 3, 0, 0, 3, 65535, 0, 3, 65534, 0, 3, 65533, 0, 3, 65532, 0, 3, 65531, 0, 3, 65528, 0, 3, 65529, 0, 3, 65530, 0, 2, 65528, 0, 1, 65528, 0, 0, 65528, 0, 65535, 65528, 0, 65534, 65528, 0, 65533, 65528, 0, 65532, 65528, 0, 65531, 65528, 0, 65530, 65528, 0, 65530, 65529, 0, 65530, 65530, 0, 65530, 65531, 0, 65530, 65532, 0, 65530, 65533, 0, 65530, 65534, 0, 65530, 65535, 0, 65530, 0, 0, 65530, 1, 0, 65530, 2, 0, 65530, 3, 0, 65530, 4, 0, 65530, 5, 0, 65530, 6, 0, 65530, 7, 0, 65531, 7, 0, 65532, 7, 0, 65533, 7, 0, 65534, 7, 0, 65535, 7, 0, 0, 7, 0, 1, 7, 0, 2, 7, 0, 2, 65529, 0, 2, 65530, 0, 2, 65531, 0, 2, 65532, 0, 2, 65533, 0, 2, 65534, 0, 2, 65535, 0, 2, 0, 0, 2, 1, 0, 2, 2, 0, 2, 3, 0, 2, 4, 0, 2, 5, 0, 1, 5, 0, 1, 6, 0, 2, 6, 0, 65531, 6, 0, 65531, 5, 0, 65531, 4, 0, 65531, 3, 0, 65531, 2, 0, 65531, 1, 0, 65531, 0, 0, 65531, 65535, 0, 65531, 65534, 0, 65531, 65533, 0, 65531, 65532, 0, 65531, 65531, 0, 65531, 65530, 0, 65531, 65529, 0, 65532, 65530, 0, 65533, 65530, 0, 65534, 65530, 0, 65535, 65530, 0, 0, 65530, 0, 1, 65530, 0, 65532, 65532, 0, 65533, 65532, 0, 65534, 65532, 0, 65535, 65532, 0, 0, 65532, 0, 1, 65532, 0, 65532, 65534, 0, 65533, 65534, 0, 65534, 65534, 0, 65535, 65534, 0, 0, 65534, 0, 1, 65534, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 65532, 2, 0, 65533, 2, 0, 65534, 2, 0, 65535, 2, 0, 0, 2, 0, 1, 2, 0, 1, 4, 0, 0, 4, 0, 65535, 4, 0, 65534, 4, 0, 65533, 4, 0, 65532, 4, 0, 65532, 6, 0, 65533, 6, 0, 65534, 6, 0, 65535, 6, 0, 0, 6, 0, 1, 3, 1, 1, 1, 1, 1, 65535, 1, 1, 65533, 1, 1, 65531, 0, 1, 65529, 1, 65532, 65529, 1, 65532, 65531, 1, 65532, 65533, 1, 65532, 65535, 1, 65532, 1, 1, 65532, 3, 1, 65532, 5, 1, 65534, 5, 0, 65535, 5, 0, 0, 5, 0, 65533, 5, 0, 65533, 3, 0, 65534, 3, 0, 65535, 3, 0, 0, 3, 0, 0, 1, 0, 65535, 1, 0, 65534, 1, 0, 65533, 1, 0, 65533, 65535, 0, 65534, 65535, 0, 65535, 65535, 0, 0, 65535, 0, 0, 65533, 0, 65535, 65533, 0, 65534, 65533, 0, 65533, 65533, 0, 65533, 65531, 0, 65534, 65531, 0, 65535, 65531, 0, 0, 65531, 0, 0, 65529, 0, 65535, 65529, 0, 65534, 65529, 0, 65533, 65529, 0)
}
metadata/_editor_floor_ = Vector3(0, -2, 0)

[node name="Mouse&Keyboard" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0198061, 1, -0.33746)

[node name="MousePad" type="MeshInstance3D" parent="Mouse&Keyboard"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.297759, 0.00386572, -0.201084)
layers = 3
mesh = SubResource("PlaneMesh_choun")
skeleton = NodePath("Mouse")

[node name="Mouse" parent="Mouse&Keyboard/MousePad" instance=ExtResource("9_choun")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0996826, 0, 0.117844)
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_z = true

[node name="Keyboard" parent="Mouse&Keyboard" instance=ExtResource("10_choun")]
transform = Transform3D(1.46, 0, 0, 0, 1.46, 0, 0, 0, 1.46, 0.0190302, 0.0384794, 0)

[node name="keypresssound" type="AudioStreamPlayer3D" parent="Mouse&Keyboard/Keyboard"]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_y6deb")
unit_size = 0.5
max_polyphony = 64

[node name="Cup" parent="." instance=ExtResource("11_ya4ey")]
transform = Transform3D(0.606752, 0, -0.794891, 0, 1, 0, 0.794891, 0, 0.606752, -0.41205, 1.11174, -0.51932)

[node name="WallTrim" parent="." instance=ExtResource("14_a8y0u")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -1, 0.0767792, 0)

[node name="Node3D" parent="." instance=ExtResource("15_jkv2x")]
transform = Transform3D(-0.0864429, 0, -0.117334, 0, 0.145738, 0, 0.117334, 0, -0.0864429, 0.662214, 1.1459, -0.660383)

[node name="Pen" parent="." instance=ExtResource("16_jbj1t")]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, -0.403267, 1.28738, -0.533314)

[node name="pen2" parent="." instance=ExtResource("17_muem4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.360419, 1.25061, -0.523309)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.165165, 1.86009, -0.949055)

[node name="stickynotered" parent="." instance=ExtResource("20_gqmmt")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.54034877, 1.6005741, -0.9483921)

[node name="stickynoteblue" parent="." instance=ExtResource("20_yc10j")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.34589905, 1.7386698, -0.94839215)

[node name="stickynoteyellow" parent="." instance=ExtResource("21_jscy8")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.38503808, 1.4584891, -0.9483921)

[node name="lights" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.12739062, 3.4710152, 0)
stream = ExtResource("21_yc10j")
unit_size = 1.0
autoplay = true

[connection signal="action_pressed" from="Mouse&Keyboard/MousePad/Mouse" to="." method="_on_mouse_clicked"]
[connection signal="action_released" from="Mouse&Keyboard/MousePad/Mouse" to="." method="_on_mouse_released"]
